--- a/Booking/templates/base.html
+++ b/Booking/templates/base.html
@@ -30,16 +30,26 @@
                 <a class="nav-link" href="{{ url_for('allUsers_page') }}">All Users</a>
             </li>
         </ul>
-
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('signIn_page') }}">Sign In</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('logIn_page') }}">Log In</a>
-            </li>
-        </ul>
-
+            {% if current_user.is_authenticated %}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link">{{ current_user.username }}</a>
+                </li>
+                <li class="nav-item">
+                    <!-- logOut_function will log out current user and redirect to index page -->
+                    <a class="nav-link" href="{{ url_for('logOut_function') }}">Logout</a>
+                </li>
+            </ul>
+            {% else %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('signIn_page') }}">Sign In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logIn_page') }}">Log In</a>
+                    </li>
+                </ul>
+            {% endif %}
       </div>
     </nav>
       {% block content %}
