Change models Offer and Guide. Implement feature 'Create new Offer' for users with admin role and sending email to new users.

--- a/Booking/templates/admin.html
+++ b/Booking/templates/admin.html
@@ -1,1 +1,16 @@
-<h1> Admin is here! </h1>
+{% extends 'base.html' %}
+
+{% block title %}
+Admin Page
+{% endblock %}
+
+{% block content %}
+<body class="text-center">
+    <div class="container">
+        <!--Create new arrangement-->
+        <a href="{{ url_for('createNewOffer_page') }}" class="btn btn-primary">Create New Offer</a>
+
+    </div>
+</body>
+
+{% endblock %}
