--- a/Booking/templates/index.html
+++ b/Booking/templates/index.html
@@ -79,7 +79,7 @@
                     <td>{{ offer.startDate }}</td>
                     <td>{{ offer.endDate }}</td>
                     <td>
-                        <button class="btn btn-outline btn-info">More Info</button>
+                        <a class="nav-link" color="white" href="{{ url_for('signIn_page') }}">More Info</a>
                     </td>
                 </tr>
             {% endfor %}
