--- a/Booking/templates/base.html
+++ b/Booking/templates/base.html
@@ -25,7 +25,8 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('index') }}">All Offers <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ url_for('index') }}">Home
+                    <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('allUsers_page') }}">All Users</a>
@@ -64,6 +65,18 @@
       body {
       background-color: #212122;
       color: white
+      }
+
+      a:hover {
+      color: gray;
+      background-color: transparent;
+      text-decoration: underline;
+      }
+
+      a:active {
+      color: blue;
+      background-color: transparent;
+      text-decoration: underline;
       }
    </style>
 
