--- a/Booking/templates/admin.html
+++ b/Booking/templates/admin.html
@@ -7,13 +7,16 @@ Admin Page
 {% block content %}
 <body class="text-center">
     <div class="container">
+        <br> <br> <br>
         <!--Create new offer-->
-        <a href="{{ url_for('createNewOffer_page') }}" class="btn btn-primary">Create New Offer</a>
+        <a href="{{ url_for('createNewOffer_page') }}" class="btn btn-primary btn-lg">Create New Offer</a>
         <br> <br> <br>
         <!--Modify(update or delete) offer that already exist-->
-        <a href="{{ url_for('modifyOffer_page') }}" class="btn btn-primary">Modify Offer</a>
-        <br>
-
+        <a href="{{ url_for('modifyOffer_page') }}" class="btn btn-primary btn-lg">Modify Offer</a>
+        <br> <br> <br>
+        <!--Show all offers with full information about them-->
+        <a href="/fullOffersInfo/all" class="btn btn-primary btn-lg">All Offers</a>
+        <br> <br> <br>
     </div>
 </body>
 
