Implement display of all users with filter

--- a/Booking/templates/admin.html
+++ b/Booking/templates/admin.html
@@ -17,6 +17,9 @@ Admin Page
         <!--Show all offers with full information about them-->
         <a href="/fullOffersInfo/all" class="btn btn-primary btn-lg">All Offers</a>
         <br> <br> <br>
+        <!--Show all users-->
+        <a href="/allUsers/all" class="btn btn-primary btn-lg">All Users</a>
+        <br> <br> <br>
     </div>
 </body>
 
