--- a/Booking/templates/base.html
+++ b/Booking/templates/base.html
@@ -32,7 +32,7 @@
             {% if current_user.is_authenticated %}
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link">{{ current_user.username }}</a>
+                    <a class="nav-link" href="{{ url_for('myProfile_page') }}">{{ current_user.username }}</a>
                 </li>
                 <li class="nav-item">
                     <!-- logOut_function will log out current user and redirect to index page -->
